# space_sim

./: .gitignore  CMakeLists.txt  testList.txt
src/io/: CMakeLists.txt
src/phycics/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  Object.h  Vector.cpp  Vector.h
src/phys/: Body.cpp  Body.h  CMakeLists.txt  Coordinate.cpp  Coordinate.h  Vector.cpp  Vector.h  World.cpp  World.h
src/sdlm/: CMakeLists.txt  GUI.cpp  GUI.h  cleanUp.cpp  cleanUp.h  event.cpp  getResourcePath.cpp  handle.cpp  handle.h  initSDL.cpp  loop.cpp  renderer.cpp  texHandl.cpp  texHandl.h
src/sim/: consts.h  main.cpp  printer.cpp  printer.h  serializator.cpp  serializator.h
